# cosmological_sims_maps_creator

./: README.md  pyproject.toml
EAGLE/: db_queries.py  galaxy.py
EAGLE_IllustrisTNG/: constants.py  galaxy.py
IllustrisTNG/: galaxy.py
base/: alignments.py  galaxy_base.py
cosmological_sims_maps_creator/base/: constants.py  galaxy_base.py  utils.py
cosmological_sims_maps_creator/simulations/: provider.py
cosmological_sims_maps_creator/simulations/EAGLE/: galaxy.py  read_data.py
cosmological_sims_maps_creator/simulations/EAGLE_IllustrisTNG/: galaxy.py
cosmological_sims_maps_creator/simulations/IllustrisTNG/: __init__.py  galaxy.py  read_data.py
simulations/: provider.py
simulations/EAGLE/: __init__.py  constants.py  galaxy.py
simulations/EAGLE_IllustrisTNG/: __init__.py  galaxy.py
simulations/IllustrisTNG/: constants.py  galaxy.py
